--- a/workflows/add-test-case.yml
+++ b/workflows/add-test-case.yml
@@ -1,31 +1,30 @@
-name: Add Test Case
+name: Deploy to GitHub Pages
 
 on:
-  workflow_dispatch: # Manually trigger the workflow
-  push: # Automatically trigger the workflow when changes are pushed to the repo
+  push:
     branches:
-      - main
+      - main  # Set to your default branch
 
 jobs:
-  add-test-case:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Add Test Case
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # Access the secret stored in GitHub Secrets
-      run: |
-        # Create a new test case file using a random name for demonstration
-        TEST_CASE_FILE="test-cases/TC_$(date +%s).md"
-        echo "# New Test Case" > $TEST_CASE_FILE
-        echo "- **Description**: Sample test case description." >> $TEST_CASE_FILE
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
-        # Commit and push the new test case file
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add $TEST_CASE_FILE
-        git commit -m "Add new test case"
-        git push
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build  # Adjust if you have a build process
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GH_TOKEN }}
+          publish_dir: ./  # Change if your build output is in a different folder
